@@ -1,0 +1,11 @@
+package net.sourceforge.atunes.kernel.modules.repository.exception;
+
+/**
+ * @author Laurent Cathala
+ */
+public class InconsistentRepositoryException extends Exception {
+
+	
+	private static final long serialVersionUID = 3462544971099489889L;
+
+}
